--- a/pc/08_UI_ADHPAbP06.html
+++ b/pc/08_UI_ADHPAbP06.html
@@ -111,7 +111,7 @@
                                                                 <td colspan="3">
                                                                     <fieldset class="box_radio_group" style="pointer-events: none;">
                                                                         <legend class="sr_only">참여자 분류 선택</legend>
-                                                                        <div class="single_radio_item">
+                                                                        <div class="box_chk-group radio_group">
                                                                             <input type="radio" id="ptcpType1" name="ptcpType" value="graduate" checked>
                                                                             <label for="ptcpType1" class="ptcp_radiocustom">
                                                                                                 <span class="sr_only">선택지 1:</span>
@@ -119,7 +119,7 @@
                                                                             </label>
                                                                         </div>
 
-                                                                        <div class="single_radio_item">
+                                                                        <div class="box_chk-group radio_group">
                                                                             <input type="radio" id="ptcpType2" name="ptcpType" value="youth">
                                                                             <label for="ptcpType2" class="ptcp_radiocustom">
                                                                                                 <span class="sr_only">선택지 2:</span>
@@ -391,7 +391,7 @@
                                 <tbody>
                                     <tr>
                                         <td>
-                                            <div class="single_radio_item"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
+                                            <div class="box_chk-group radio_group"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
                                         </td>
                                         <td>AAA 대학교</td>
                                         <td>대구광역시 달서구 달구벌대로 1095(신당동) 대학일자리플러스센터</td>
@@ -399,7 +399,7 @@
                                     </tr>
                                     <tr>
                                         <td>
-                                            <div class="single_radio_item"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
+                                            <div class="box_chk-group radio_group"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
                                         </td>
                                         <td>BBB 대학교</td>
                                         <td>서울특별시 광진구 능동로 209(군자동) BBB대학교</td>
@@ -407,7 +407,7 @@
                                     </tr>
                                     <tr>
                                         <td>
-                                            <div class="single_radio_item"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
+                                            <div class="box_chk-group radio_group"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
                                         </td>
                                         <td>CCC 대학교</td>
                                         <td>서울특별시 광진구 능동로 209(군자동) CCC대학교</td>
@@ -415,7 +415,7 @@
                                     </tr>
                                     <tr>
                                         <td>
-                                            <div class="single_radio_item"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
+                                            <div class="box_chk-group radio_group"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
                                         </td>
                                         <td>DDD 대학교</td>
                                         <td>서울특별시 광진구 능동로 209(군자동) DDD대학교</td>
@@ -423,7 +423,7 @@
                                     </tr>
                                     <tr>
                                         <td>
-                                            <div class="single_radio_item"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
+                                            <div class="box_chk-group radio_group"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
                                         </td>
                                         <td>EEE 대학교</td>
                                         <td>서울특별시 광진구 능동로 209(군자동) EEE대학교</td>
@@ -431,7 +431,7 @@
                                     </tr>
                                     <tr>
                                         <td>
-                                            <div class="single_radio_item"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
+                                            <div class="box_chk-group radio_group"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
                                         </td>
                                         <td>FFF 대학교</td>
                                         <td>서울특별시 광진구 능동로 209(군자동) FFF대학교</td>
@@ -439,7 +439,7 @@
                                     </tr>
                                     <tr>
                                         <td>
-                                            <div class="single_radio_item"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
+                                            <div class="box_chk-group radio_group"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
                                         </td>
                                         <td>GGG 대학교</td>
                                         <td>서울특별시 광진구 능동로 209(군자동) GGG대학교</td>
@@ -447,7 +447,7 @@
                                     </tr>
                                     <tr>
                                         <td>
-                                            <div class="single_radio_item"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
+                                            <div class="box_chk-group radio_group"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
                                         </td>
                                         <td>HHH 대학교</td>
                                         <td>서울특별시 광진구 능동로 209(군자동) HHH대학교</td>
@@ -455,7 +455,7 @@
                                     </tr>
                                     <tr>
                                         <td>
-                                            <div class="single_radio_item"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
+                                            <div class="box_chk-group radio_group"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
                                         </td>
                                         <td>III 대학교</td>
                                         <td>서울특별시 광진구 능동로 209(군자동) III대학교</td>
@@ -463,7 +463,7 @@
                                     </tr>
                                     <tr>
                                         <td>
-                                            <div class="single_radio_item"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
+                                            <div class="box_chk-group radio_group"><input type="radio" name="univSelect" title="!!대학교명 넣어주세요!!"/></div>
                                         </td>
                                         <td>JJJ 대학교</td>
                                         <td>서울특별시 광진구 능동로 209(군자동) JJJ대학교</td>
