--- a/pc/10_UI_ADHPAbP08.html
+++ b/pc/10_UI_ADHPAbP08.html
@@ -474,164 +474,111 @@
                                         <li>
                                             <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major1" />
-                                                <label for="major1">
-                                                                        <span class="sr_only">국문역사학과군 선택</span>
-                                                </label>
+                                                <label for="major1">국문역사학과군</label>
                                             </div>
-                                            <label for="major1">국문역사학과군</label>
                                         </li>
                                         <li>
                                             <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major2" />
-                                                <label for="major2">
-                                                                        <span class="sr_only">국문일문중문학과군 선택</span>
-                                                </label>
+                                               <label for="major2">국문일문중문학과군</label>
                                             </div>
-                                            <label for="major2">국문일문중문학과군</label>
+                                            
                                         </li>
                                         <li>
                                             <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major3" />
-                                                <label for="major3">
-                                                                        <span class="sr_only">국문영문학과군 선택</span>
-                                                </label>
+                                                <label for="major3">국문영문학과군</label>
                                             </div>
-                                            <label for="major3">국문영문학과군</label>
                                         </li>
                                         <li>
                                             <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major4" />
-                                                <label for="major4">
-                                                                        <span class="sr_only">국문학과군 선택</span>
-                                                </label>
+                                                <label for="major4">국문학과군</label>
                                             </div>
-                                            <label for="major4">국문학과군</label>
                                         </li>
                                         <li>
                                             <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major5" />
-                                                <label for="major5">
-                                                                        <span class="sr_only">국어국문문 영어영문학과군 선택</span>
-                                                </label>
+                                                <label for="major5">국어국문문 영어영문학과군</label>
                                             </div>
-                                            <label for="major5">국어국문문 영어영문학과군</label>
                                         </li>
                                         <li>
                                             <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major6" />
-                                                <label for="major6">
-                                                                        <span class="sr_only">국어국문영어영문학과 선택</span>
-                                                </label>
+                                                <label for="major6">국어국문영어영문학과</label>
                                             </div>
-                                            <label for="major6">국어국문영어영문학과</label>
                                         </li>
                                         <li>
                                             <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major7" />
-                                                <label for="major7">
-                                                                        <span class="sr_only">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST  선택</span>
-                                                </label>
+                                                <label for="major7">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                             </div>
-                                            <label for="major7">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                         </li>
                                         <li>
                                             <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major8" />
-                                                <label for="major8">
-                                                                        <span class="sr_only">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST  선택</span>
-                                                </label>
+                                                <label for="major8">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                             </div>
-                                            <label for="major8">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                         </li>
                                         <li>
                                             <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major9" />
-                                                <label for="major9">
-                                                                        <span class="sr_only">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST  선택</span>
-                                                </label>
+                                                <label for="major9">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                             </div>
-                                            <label for="major9">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                         </li>
                                         <li>
                                             <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major10" />
-                                                <label for="major10">
-                                                                        <span class="sr_only">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST 선택</span>
-                                                </label>
+                                                <label for="major10">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST</label>
                                             </div>
-                                            <label for="major10">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST</label>
                                         </li>
                                         <li>
                                             <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major11" />
-                                                <label for="major11">
-                                                                        <span class="sr_only">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST  선택</span>
-                                                </label>
+                                                <label for="major11">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                             </div>
-                                            <label for="major11">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                         </li>
                                         <li>
                                             <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major12" />
-                                                <label for="major12">
-                                                                        <span class="sr_only">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST  선택</span>
-                                                </label>
+                                                <label for="major12">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                             </div>
-                                            <label for="major12">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                         </li>
                                         <li>
                                             <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major13" />
-                                                <label for="major13">
-                                                                        <span class="sr_only">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST  선택</span>
-                                                </label>
+                                                <label for="major13">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                             </div>
-                                            <label for="major13">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                         </li>
                                         <li>
                                             <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major14" />
-                                                <label for="major14">
-                                                                        <span class="sr_only">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST  선택</span>
-                                                </label>
+                                                <label for="major14">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                             </div>
-                                            <label for="major14">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                         </li>
                                         <li>
                                             <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major15" />
-                                                <label for="major15">
-                                                                        <span class="sr_only">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST  선택</span>
-                                                </label>
+                                                <label for="major7">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                             </div>
-                                            <label for="major7">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                         </li>
                                         <li>
                                             <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major16" />
-                                                <label for="major16">
-                                                                        <span class="sr_only">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST  선택</span>
-                                                </label>
+                                                <label for="major16">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                             </div>
-                                            <label for="major16">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                         </li>
                                         <li>
                                             <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major17" />
-                                                <label for="major17">
-                                                                        <span class="sr_only">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST  선택</span>
-                                                </label>
+                                                <label for="major17">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                             </div>
-                                            <label for="major17">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                         </li>
                                         <li>
                                             <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major18" />
-                                                <label for="major18">
-                                                                        <span class="sr_only">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST  선택</span>
-                                                </label>
+                                                <label for="major18">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                             </div>
-                                            <label for="major18">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                         </li>
                                     </ul>
                                 </div>
