--- a/pc/UI_ADHPCbS04-1.html
+++ b/pc/UI_ADHPCbS04-1.html
@@ -146,7 +146,7 @@
                                                                     <span class="sr_only">필수 입력</span>
                                                                 </th>
                                                                 <td colspan="3">
-                                                                    <fieldset class="radio_group">
+                                                                    <fieldset class="box_radio_group">
                                                                         <legend class="sr_only">참여자 분류 선택</legend>
                                                                         <div class="box_chk-group radio_group">
                                                                             <input type="radio" class="ptcpType1" id="ptcpType1" name="ptcpType" value="graduate" checked>
@@ -314,7 +314,7 @@
                                                     </div>
                                                     
                                                     <div class="agm_cho">
-                                                        <fieldset class="radio_group" role="radiogroup" aria-labelledby="agmLabel">
+                                                        <fieldset class="box_radio_group" role="radiogroup" aria-labelledby="agmLabel">
                                                             <legend id="agmLabel" class="sr_only">개인정보 수집·이용·제공 동의</legend>                                                            
                                                             <div class="box_chk-group radio_group">
                                                                 <input type="radio" id="agmType1" name="agmType" value="yes">
