--- a/pc/UI_ADHPChS08.html
+++ b/pc/UI_ADHPChS08.html
@@ -254,17 +254,17 @@
                                                         <tr>
                                                             <th scope="row">취업지원유형</th>
                                                             <td colspan="3"> 
-                                                                <fieldset class="box_radio_group flex_box" disabled role="radiogroup" aria-labelledby="participationLabel">
+                                                                <fieldset class="box_radio_group flex_box" role="radiogroup" aria-labelledby="participationLabel">
                                                                     <legend id="participationLabel" class="sr_only">취업지원유형 선택</legend>                                                            
                                                                     <div class="box_chk-group radio_group">
-                                                                        <input type="radio" id="participationType1" name="participationType" value="">
+                                                                        <input type="radio" id="participationType1" name="participationType" value="" disabled>
                                                                         <label for="participationType1">
                                                                             <span class="label_text">자기주도형</span>
                                                                         </label>
                                                                     </div>
 
                                                                     <div class="box_chk-group radio_group">
-                                                                        <input type="radio" id="participationType2" name="participationType" value="" checked>
+                                                                        <input type="radio" id="participationType2" name="participationType" value="" checked disabled>
                                                                         <label for="participationType2">
                                                                             <span class="label_text">서비스참여형</span>
                                                                         </label>
@@ -652,17 +652,17 @@
                                                         <tr>
                                                             <th scope="row">개인별 월(1일~말일) 20만원 초과여부</th>
                                                             <td>
-                                                                <fieldset class="box_radio_group flex_box" disabled role="radiogroup" aria-labelledby="existLabel">
+                                                                <fieldset class="box_radio_group flex_box" role="radiogroup" aria-labelledby="existLabel">
                                                                     <legend id="existLabel" class="sr_only">개인별 월(1일~말일) 20만원 초과여부 선택</legend>                                                            
                                                                     <div class="box_chk-group radio_group">
-                                                                        <input type="radio" id="existType1" name="existType" value="" checked>
+                                                                        <input type="radio" id="existType1" name="existType" value="" checked disabled>
                                                                         <label for="existType1">
                                                                             <span class="label_text">있음</span>
                                                                         </label>
                                                                     </div>
 
                                                                     <div class="box_chk-group radio_group">
-                                                                        <input type="radio" id="existType2" name="existType" value="">
+                                                                        <input type="radio" id="existType2" name="existType" value="" disabled>
                                                                         <label for="existType2">
                                                                             <span class="label_text">없음</span>
                                                                         </label>
@@ -673,17 +673,17 @@
                                                         <tr>
                                                             <th scope="row">수당 누적 총액 100만원 초과여부</th>
                                                             <td>
-                                                                <fieldset class="box_radio_group flex_box" disabled role="radiogroup" aria-labelledby="accrueLabel">
+                                                                <fieldset class="box_radio_group flex_box" role="radiogroup" aria-labelledby="accrueLabel">
                                                                     <legend id="accrueLabel" class="sr_only">수당 누적 총액 100만원 초과여부 선택</legend>                                                            
                                                                     <div class="box_chk-group radio_group">
-                                                                        <input type="radio" id="accrueType1" name="accrueType" value=""checked>
+                                                                        <input type="radio" id="accrueType1" name="accrueType" value=""checked disabled>
                                                                         <label for="accrueType1">
                                                                             <span class="label_text">있음</span>
                                                                         </label>
                                                                     </div>
 
                                                                     <div class="box_chk-group radio_group">
-                                                                        <input type="radio" id="accrueType2" name="accrueType" value="">
+                                                                        <input type="radio" id="accrueType2" name="accrueType" value="" disabled>
                                                                         <label for="accrueType2">
                                                                             <span class="label_text">없음</span>
                                                                         </label>
@@ -699,17 +699,17 @@
                                                                 </div>
                                                             </th>
                                                             <td>
-                                                                <fieldset class="box_radio_group flex_box" disabled role="radiogroup" aria-labelledby="agreeChkLabel">
+                                                                <fieldset class="box_radio_group flex_box" role="radiogroup" aria-labelledby="agreeChkLabel">
                                                                     <legend id="agreeChkLabel" class="sr_only">참여수당 관련 부정수급 방지 확약서 동의 여부 선택</legend>                                                            
                                                                     <div class="box_chk-group radio_group">
-                                                                        <input type="radio" id="agreeChkType1" name="agreeChkType" value=""checked>
+                                                                        <input type="radio" id="agreeChkType1" name="agreeChkType" value=""checked disabled>
                                                                         <label for="agreeChkType1">
                                                                             <span class="label_text">동의</span>
                                                                         </label>
                                                                     </div>
 
                                                                     <div class="box_chk-group radio_group">
-                                                                        <input type="radio" id="agreeChkType2" name="agreeChkType" value="">
+                                                                        <input type="radio" id="agreeChkType2" name="agreeChkType" value="" disabled>
                                                                         <label for="agreeChkType2">
                                                                             <span class="label_text">동의안함</span>
                                                                         </label>
